[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/GameControl.gd" type="Script" id=1]
[ext_resource path="res://Scenes/StartingSystem.tscn" type="PackedScene" id=2]

[sub_resource type="Theme" id=1]

[node name="GameControl" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TimerContainer" type="MarginContainer" parent="."]
editor/display_folded = true
visible = false
margin_left = 804.0
margin_top = 33.0
margin_right = 989.0
margin_bottom = 93.0

[node name="Panel" type="Panel" parent="TimerContainer"]
margin_right = 185.0
margin_bottom = 60.0

[node name="Label" type="Label" parent="TimerContainer"]
margin_left = 185.0
margin_top = 23.0
margin_right = 185.0
margin_bottom = 37.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
theme = SubResource( 1 )
align = 1

[node name="StartingSystem" parent="." instance=ExtResource( 2 )]

[node name="MenuContainer" type="MarginContainer" parent="."]
visible = false
margin_left = 312.0
margin_top = 136.0
margin_right = 712.0
margin_bottom = 420.0

[node name="Panel" type="Panel" parent="MenuContainer"]
margin_right = 400.0
margin_bottom = 284.0

[node name="Label" type="Label" parent="MenuContainer/Panel"]
margin_top = 23.0303
margin_right = 400.0
margin_bottom = 37.0303
text = "Race this course again?"
align = 1

[node name="RaceGhost" type="Button" parent="MenuContainer/Panel"]
margin_left = 132.138
margin_top = 50.0284
margin_right = 262.138
margin_bottom = 94.0284
text = "Race against ghost"

[node name="RaceNoGhost" type="Button" parent="MenuContainer/Panel"]
margin_left = 130.304
margin_top = 103.681
margin_right = 263.304
margin_bottom = 147.681
text = "Race without ghost"

[node name="QuitToMenu" type="Button" parent="MenuContainer/Panel"]
margin_left = 133.304
margin_top = 158.166
margin_right = 262.304
margin_bottom = 202.166
text = "Quit to Menu"

[node name="QuitToDesktop" type="Button" parent="MenuContainer/Panel"]
margin_left = 133.304
margin_top = 213.166
margin_right = 262.304
margin_bottom = 257.166
text = "Quit to Desktop"
[connection signal="pressed" from="MenuContainer/Panel/RaceGhost" to="." method="_on_RaceGhost_pressed"]
[connection signal="pressed" from="MenuContainer/Panel/RaceNoGhost" to="." method="_on_RaceNoGhost_pressed"]
[connection signal="pressed" from="MenuContainer/Panel/QuitToMenu" to="." method="_on_QuitToMenu_pressed"]
[connection signal="pressed" from="MenuContainer/Panel/QuitToDesktop" to="." method="_on_QuitToDesktop_pressed"]
